--- a/iPhoneWorker/iPhoneWorker.csproj
+++ b/iPhoneWorker/iPhoneWorker.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <PackageReference Include="SSH.NET" Version="2020.0.1" />
   </ItemGroup>
 
 </Project>
